[package]
name = "picasso-wasm"
version = "0.1.5"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug = []

[dependencies]
wasm-bindgen = "0.2.50"
wee_alloc = { version = "0.4.2" }
js-sys = "0.3.56"
crc = "1.8.1"
quad-rand = "0.2.1"
numtoa = "0.2.4"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[profile.release]
opt-level = "z"
lto = true
